Do some wordsmithing to make the proposal easier to read (the original author is not a native speaker of English).

--- a/tip/527.md
+++ b/tip/527.md
@@ -10,28 +10,29 @@
 	Post-History: 
 -----
 
-# Abstract
+## Abstract
 
-This TIP proposes new command `timerate` as well as measurement toolchain for TCL.
+This TIP proposes a new command `timerate` as well as a measurement toolchain for TCL.
 
-For provide a possibility to compare results between Tcl versions the version 8.5 is suggested as target version for this TIP.
-(In case of some objections by extending of old versions, the command `timerate` could be placed into `::tcl::unsupported namespace`.)
+In order for it to be possibile to compare results among older Tcl versions, the version 8.5 is suggested as a target version for this TIP.
+(To forestall the objection that this TIP extends old versions, the command `timerate` shall be placed into `::tcl::unsupported ` namespace in versions prior to 8.7.)
 
-Additionally this TIP proposes (optionally) a small framework to test performance. This makes possible to create a test-script for
-performance-relevant coverage and allows to compare the results diff-based to find performance degradation between revisions.
+Additionally, this TIP proposes-optionally-a small framework to test performance. This makes possible to create test scripts for
+possible performance regressions and allows a `diff`-based comparison of the results to find performance degradation between revisions.
 
-# Rationale
+## Rationale
 
-Although the already available command `time` can be used for performance measurement, but it has several disadvantages:
+Although the existing command `time` can be used for performance measurement, it has several disadvantages:
 
- 1. the execution is limited by fixed repetition count, so the real execution time is undefined (if the evaluation time of single iteration is unknown or may vary in time in different versions), thus it could grow to very long time.
- 2. it does not have a calibration ability.
- 3. it uses default script invocation function (`Tcl_EvalObjEx`), therefore the execution of the script differentiates from execution of compiled byte-code (e. g. in the compiled procedure),
-    additionally measurement is very unprecise on extream fast scripts, so it has certain overhead (on execution up to TclNRRunCallbacks resp. corresponding TEBCResume of compiled script
-    as well as the extern costs involved like a washout of the CPU-cache, branch misprediction, etc).
+ 1. The execution is limited by fixed repetition count, so the real execution time is undefined (if the evaluation time of single iteration is unknown or may vary in time in different versions). The time neede by a test case could grow to be very great.
+ 2. `time` does not have a calibration ability.
+ 3. `time` uses the default script invocation function (`Tcl_EvalObjEx`), therefore the speed of the script is different from that of compiled byte-code (_e.g._ in a compiled procedure),
+ 4. In addition measurement is very imprecise on extremely fast scripts, because of certain unadvoidable overhead costs (the execution of `time` and the interpreter overhead up to the `TclNRRunCallbacks` call that invokes `TEBCResume` for a compiled script).
+ 5. `time` introduces additional external costs on the script being measured, such as washout of the CPU-cache and branch misprediction.
 
 <hr/>
-# I. Proposal of command `timerate`
+
+## I. Proposed command: `timerate`
 
 	timerate - Time-related execution resp. performance measurement of a script
 
@@ -62,46 +63,48 @@ which indicates:
 
        - the estimated real execution time without measurement overhead (`lindex $result 6`)
 
-Time is measured in elapsed time using heighest timer resolution as possible, not CPU time.
-This command may be used to provide information as to how well the script or a tcl-command is per‐forming and can help determine bottlenecks and fine-tune application performance.
+Time is measured in elapsed time using the finest timer resolution as possible, not CPU time.
+This command may be used to provide information as to how well the script or a tcl-command is performing and can help determine bottlenecks and fine-tune application performance.
 
-In opposition to `time` the execution limited here by fixed time.
-Additionally the compiled variant of the script will be used during whole evaluation (as if it were part of a compiled proc),
-if parameter -direct is not specified.
-Therefore it provides more precise results and prevents very long execution time by slow scripts resp. scripts with unknown execution time of single iteration.
+As opposed to the `time` commmand, which runs the tested script for a fixed
+number of iterations, the `timerate` command runs it for a fixed time.
+Additionally, the compiled variant of the script will be used during the entire measurement, as if the script were part of a compiled procedure,
+if the `-direct` option is not specified.
+The fixed time period and possibility of compilation allow for  more precise results and prevent very long execution times by slow scripts, making it practical for measuring scripts with highly uncertain execution times.
 
-To measure very fast scripts as exact as posible the calibration process may be required.
+To measure very fast scripts as precisely as posible the calibration process may be required.
 
-	-calibrate
+### Options
 
-This parameter used to calibrate timerate calculating the estimated overhead of given script as default overhead for further execution of timerate.
-It can take up to 10 seconds if parameter time is not specified.
+`-calibrate`
 
-	-overhead double
+The `-calibrate` option is used to calibrate `timerate`, calculating the estimated overhead of the given script as the default overhead for future invocations of the `timerate` command. If the `time` parameter is not specified, the `-calibrate` procedure runs for up to 10 seconds.
 
-This parameter used to supply the measurement overhead of single iteration (in microseconds) that should be ignored during whole evaluation process.
+`-overhead` _double_
 
-	-direct
+The `-overhead` parameter supplies an estimate (in microseconds) of the measurement overhead of each iteration of the tested script. This quantity will be subtracted from the measured time prior to reporting results.
 
-Causes direct execution per iteration (not compiled variant of evaluation used, similar to `time` - can be used to measure `Tcl_EvalObjEx` as well as invocation of canonical list).
+`-direct`
+
+The `-direct` option causes direct execution of the supplied script, without compilation, in a manner similar to the `time` command. It can be used to measure the cost of `Tcl_EvalObjEx`, of the invocation of canonical lists, and of the uncompiled versions of bytecoded commands.
 
 ### Examples
 
-Estimate how fast it takes for a simple Tcl for loop (including operations on variable i) to count to a ten:
+Estimate how fast it takes for a simple Tcl `for` loop (including operations on variable `i`) to count to ten:
 
 	# calibrate:
 	timerate -calibrate {}
 	# measure:
 	timerate { for {set i 0} {$i<10} {incr i} {} } 5000
 
-Estimate how fast it takes for a simple Tcl for loop only (ignoring the overhead for operations on variable i) to count to a ten:
+Estimate how fast it takes for a simple Tcl `for` loop, ignoring the overhead for to perform ten iterations, ignoring the overhead of the management of the variable that controls the loop:
 
 	# calibrate for overhead of variable operations:
 	set i 0; timerate -calibrate {expr {$i<10}; incr i} 1000 
 	# measure:
 	timerate { for {set i 0} {$i<10} {incr i} {} } 5000
 
-Estimate the rate of calculating the hour using clock format only, ignoring overhead of the rest, without measurement how fast it takes for a whole script:
+Estimate the speed of calculating the hour of the day using `clock format` only, ignoring overhead of the portion of the script that prepares the time for it to calculate:
 
 	# calibrate:
 	timerate -calibrate {}
@@ -115,40 +118,46 @@ Estimate the rate of calculating the hour using clock format only, ignoring over
 	  incr tm [expr {24*60*60}]; # overhead for this is ignored
 	} 5000
 
-### Imact
+### Impact
 
 As the current implementation in [sebres-8-6-timerate](/tcl/timeline?n=100&r=sebres-8-6-timerate) 
-(resp. [sebres-8-5-timerate](/tcl/timeline?n=100&r=sebres-8-5-timerate)) shows, no public API's are affected by introducing this,
-solely some new functions are provided for Tcl internal API (see tclInt.h).
+(or, for Tcl 8.5, [sebres-8-5-timerate](/tcl/timeline?n=100&r=sebres-8-5-timerate)) shows, no public API's are affected by introducing this,
+A few new functions are provided for Tcl's internal API (see `tclInt.h`).
 
-Don Porter (dgp) has made a review of this targeting 8.7, which can be found in branch [dgp-sebres-timerate-review](/tcl/timeline?n=100&r=dgp-sebres-timerate-review).
-This branch already contains the test-performance framework as well as `tests-perf/clock.perf.tcl` script (originate by me in clock speedup branch).
+Don Porter (`dgp`) has made a review of the version of this change that  targets Tcl 8.7, which can be found in branch [dgp-sebres-timerate-review](/tcl/timeline?n=100&r=dgp-sebres-timerate-review).
+The branch already contains the performance testing  framework as well as a new script, `tests-perf/clock.perf.tcl` that instruments the `clock` command in preparation for integrating changes that improve its performance..
 
 <hr/>
-# II. Proposal of test-performance framework `::tclTestPerf`
+## II. Proposed performance-testing framework: `::tclTestPerf`
 
-This small test-suite should provide possibility for batch-based measurement as well as to have evaluable diff-based results
-as comparison between revisions, which should allow to find performance degradation on some versions.
+The small test suite in the `::tclTestPerf` namespace allows for batch-based measurement and diff-based results
+to compare performamnce among revisions and detect performance regressions.
 
 ### Synopsis
 
 	::tclTestPerf::_test_run time scripts
 
-This command executes a batch of scripts, a "canonical" tcl-list with an exception that rows could be commented (using tcl comment-chars `#`), 
-which simply produces an output, can be used as anchor in automated evaluation of test-results (or diff).
-The execution of uncommented blocks produces tclsh-similar output so `% command ...`, result of the single execution and result of the timerate invocation.
-
-Special tokens can be used to setup or cleanup, to execute once some script before and after the measurement:
+The `_test_run` command executes a batch of scripts provided in the syntax of a Tcl list, with the exception that rows may be commented using Tcl's `#` syntax.
+It produces an output, that can be used for automated comparison of perfomance measurements.
+When uncommented elements of the script are executed, an output is produced that is similar to the transcript of a `tclsh` session. The output for each element consists of:
+ * a line consisting of the string, '% ', followed by the element being evaluated.
+ * a line containing the result returned by evaluating the given element.
+ * a line containing the result of applying `timerate` to the given element.
+ 
+The special tokens, `setup` and `cleanup`, can be used to specify actions
+needed to initialize and finalize the test sequence before and after
+conducting the measurements; for example:
 
 	::tclTestPerf::_test_run 500 {
 	  setup {set i 0}
-	  {clock format [incr i] -format "%Y-%m-%dT%H:%M:%S" -locale en -timezone :CET}
+	  {clock format [incr i] -format "%Y-%m-%dT%H:%M:%S" \
+	       -locale en -timezone :CET}
 	  cleanup {unset i}
 	  ...
 	}
 
-It is recommendable to separate multiple scripts into several bolocks, be cause this produces the summary output at end of execution, 
-which contains the total, average, min and max time of execution of this script-block (thus making easier to find a candidate affected by degradation).
+It is recommended that the programmer divide multiple scripts into several blocks, because each block produces a separate summary output at end of execution, 
+which contains the total, average, min and max time of execution of the script that the block contains, making it easier to identify which specific element has suffered from a performance regression.
 
 ### Usage as test-script
 
