New version of TIP #510 from René Zaumseil. Complete rewrite, with tkpath now included.

--- a/tip/510.md
+++ b/tip/510.md
@@ -1,4 +1,4 @@
-# TIP 510: Add Rbc to Tk
+# TIP 510: Add Rbc and Tkpath widgets to Tk
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
@@ -18,66 +18,132 @@
 
 # Abstract
 
-*Rbc* aka "Refactored BLT Components" provides some widgets which are missing in *Tk*.
-This TIP intends to add *Rbc* in the same way as *Ttk* to *Tk*.
+[Rbc][] aka "Refactored [BLT][] Components" have graph widgets and Tk commands which are missing in *Tk*.
+
+[Tkpath][] is a 2D-canvas like widget modelled after [SVG][].
+
+This TIP intends to add the following command to Tk:
+
+**rbc::graph**, **rbc::stripchart** and **rbc::barchart** as **graph**
+
+> To get the original functionality a *-style* option will be added. This
+option can only be set on creation time.
+
+**rbc::vector** as **graph::vector**
+
+> The vector is currently only used inside the graph widget. The namespace hidden version leaves room for a first class command with the same name.
+
+**rbc::winop snap** as **tk snap**
+
+> Only the snap functionality is needed here. The busy command already exists as "tk busy" :)
+
+**tkp::canvas** as **path**
+
+> The new path widget will contain the [SVG][] like items and an additional **window** item to include other windows. Support functions will be placed in the **::path** namespace.
 
 # Rationale
 
-*Tk* has already adopted some of *BLT/Rbc* commands.
-Still missing are the widgets.
+## Rbc commands
 
-*Rbc* is available on sourceforge and github, but the development is stalled.
+*Tk* has already adopted some of [BLT][]/[Rbc][] commands.
+Still missing are the above mentioned commands.
 
-Modernizing *Rbc* and including it in *Tk* will give some great new widgets.
-Using the same approach like in *Ttk* will give results in very short time.
-There is also less risk because *Rbc* is already used in different projects.
+[Rbc][] is available on sourceforge and github, but the development is stalled.
+
+[BLT][], the orignal source, is at sourceforge. The author G. Howlett makes sporadic changes. Then there are large times without activity. It is not possible to estimate when a new version will be ready.
+
+Modernizing [Rbc][] and including it in *Tk* will give some great new widgets.
+There is also less risk because [Rbc][] is already used in different projects.
+
+## Tkpath
+
+The original developer of [Tkpath][] passed away. There are some mirrors, but with no real development. More information could be found on <https://wiki.tcl-lang.org/page/tkpath>.
+
+The intent of [Tkpath][] was to substitute the *Tk* canvas. This leads to problems with advanced features (matrix transformations). Therefore the new **path** widget will only contain [SVG][] like items. The only exception is the **window** item. This item is necessary to embed other widgets.
 
 # Specification
 
-C-source code will be put in `.../generic/rbc/`
-Tcl-source  code will be put in `.../library/rbc/`
-Test files will be put in `.../tests/rbc/`
+## Files
 
-The *Rbc* files will be added to the makefiles.
-The call to the `Rbc_Init()` function will be added in tkWindow.c
+- C-source code will be put in `.../generic/rbc/`
+  - `rcb*.[ch]` graph widget and vector command
+  - `tk*.[ch]` tkpath widget
+- Tcl-source code will be put in `.../library/`
+  - [`graph.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/graph.tcl) graph widget bindings
+  - [`path.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/path.tcl) path widget helper function under **::path**
+- Documentaion files will be put in `.../doc/`
+  - [`graph.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/graph.n.md) graph widget documentation
+  - [`vector.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/vector.n.md) graph::vector command documentation
+  - [`path.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/path.n.md) path widget documentation
+- Test files will be put in `.../tests/rbc/`
+  - [`graph.test`](https://core.tcl.tk/tk/doc/tip-510/tests/rbc/graph.test) graph widget tests
+  - [`graph_vector.test`](https://core.tcl.tk/tk/doc/tip-510/tests/rbc/graph_vector.test) graph::vector command tests
+  - [`path.test`](https://core.tcl.tk/tk/doc/tip-510/tests/rbc/path.test) path widget tests
 
-## Platform Compatibility
+The new files are  added to the makefiles.
+The calls to the initialization functions are in tkWindow.c
 
-Initially, there will not be support for macOS when not using X11 for
-rendering. _This is an interim situation stemming from the Rbc
-developers being unable to target that platform when writing code;
-implementation there will be welcome and authorized under this TIP._
+## ::oo::class widgets
 
+The new widgets **graph** and **path** are implemented as **oo::class**. This will make it easy to extent the functionality. As an example see the file `.../library/graph.tcl` in which the method **binding** of the **graph** widget is implemented.
+
+## C Interface
+
+Alle new functionality is in the two header files [`rbcInt.h`](https://core.tcl.tk/tk/doc/tip-510/generic/rbc/rbcInt.h) and [`tkPathInt.h`]((https://core.tcl.tk/tk/doc/tip-510/generic/rbc/tkPathInt.h). No functionality is currently exported.
+ 
 # Discussion
-
-Which commands should be included?
-
-- **vector**: needed for graph
-- **graph**: curve display widget
-- **stripchart**: 
-- **barchart**:
-- **busy**: not needed, because we already have **tk busy**
-- **winop**: not needed; only functionality not duplicated is **winop snap**
-
-Should there be a special switch to enable compiling and including *Rbc*?
-
-Should we change *Rbc* to some other name to prevent name clashes?
-
-Should we export a C-interface?
 
 See also discussion at the [wiki](http://wiki.tcl.tk/55360).
 
+A first voting was rejected, mostly because of the missing Mac implementation. See:
+
+<http://code.activestate.com/lists/tcl-core/20357/>  
+<http://code.activestate.com/lists/tcl-core/20368/>  
+
+and with some analysis from Donal:
+
+<http://code.activestate.com/lists/tcl-core/20384/>  
+
+# Open issues
+
+- Mac implementation of **graph** widget. May be borrow code from **path**
+- Remove or change old code in `generic/rbc/rbc*` files <http://code.activestate.com/lists/tcl-core/20384/>
+- Hardcoded usage of compiler and libraries in [`win/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/win/Makefile.in), [`win/makefile.vc`](https://core.tcl.tk/tk/doc/tip-510/win/makefile.vc) and [`unix/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/unix/Makefile.in) (search for "#RZ TODO").
+- Add **path** files in Mac implementation. It works at least in [Androwish][].
+- Which platforms should be used in **path**
+  - SDL/AGG: platform independent, more work is needed using [`tkSDLAGGPath.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/rbc/tkSDLAGGPath.cpp). See in [Androwish][]
+  - GDI+ on Windows => working with [`tkWinGDIPlusPath.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/rbc/`tkWinGDIPlusPath.cpp)
+  - Cairo on unix => working with [`tkUnixCairoPath.c`](https://core.tcl.tk/tk/doc/tip-510/generic/rbc/tkUnixCairoPath.c)
+  - For Mac see [`tkMacOSXPath.c`](https://core.tcl.tk/tk/doc/tip-510/generic/rbc/tkMacOSXPath.c)
+- Provide demos
+- Add more **path** tests
+- Is it necessary to translate the documentation into man format?
+- It is currently not possible to use unique abbreviations of slass method names p.e. "graph .g; .g conf" A workaround would be to add all those method names. May be this can be solved in tcl::oo directly?
+
+Any help especially with the Mac implementation would be great!
+
+And could please look someone with `configure` foo at the Makefile's
+
 # Implementation
 
-A patch implementing these changes will be available in the fossil
+A patch implementing these changes is available in the fossil
 repository in the [tip-510 branch](https://core.tcl.tk/tk/timeline?r=tip-510).
 
-Test/Documentation updates not yet done.
+Test files are available in the .../tests/rbc/ directory.
+
+Documentation is available in md-Format in the .../doc/ directory.
 
 # Alternatives
 
-- Rewrite new tk widgets with code of rbc
+- Wait on new [BLT][].
+- Develop widgets in extensions.
 
 # Copyright
 
 This document has been placed in the public domain.
+
+[Androwish]: <http://www.androwish.org/index.html/dir?ci=acc27dd8488dc770&name=jni/tkpath>
+[BLT]: <https://sourceforge.net/projects/blt/>
+[Rbc]: <https://sourceforge.net/projects/rbctoolkit/>
+[SVG]: <http://www.w3.org/TR/SVG11/>
+[Tkpath]: <https://sourceforge.net/projects/tclbitprint/> 
