New version of TIP #507 by René Zaumseil

--- a/tip/507.md
+++ b/tip/507.md
@@ -12,7 +12,7 @@
 
 # Abstract
 
-Tk needs scalable images on high resolution mobile devices. This TIP proposes to let Tk be able to read an SVG image (plus information about orientation and pixel scale) and make it into a photo image. It is therefore a (lossy and single direction) conversion operation from an SVG format to a pixel format.
+Tk needs scalable images on high resolution mobile devices. This TIP proposes to let Tk be able to read an [SVG][] image (plus information about orientation and pixel scale) and make it into a photo image. It is therefore a (lossy and single direction) conversion operation from an [SVG][] format to a pixel format.
 
 # Rationale
 
@@ -20,11 +20,9 @@ Tk is running on desktop and mobile devices. The out of the box image formats
 do not scale and are to tiny on high res mobile devices.
 The same goes for the image formats provided by the Img extension.
 
-There is already a [Tk image extension](https://github.com/auriocus/tksvg).
-The implementation is using nanosvg. It has no other external dependencies
-and is only 2 header files.
+There is already a tk image extension [tksvg][]. The implementation is using [nanosvg][]. It has no other external dependencies and is only 2 header files.
 
-**nanosvg** was choosen because it:
+[nanosvg][] was choosen because it:
 
 - has a suitable license
 - is written in 2 plain C header files and can be easily included
@@ -33,18 +31,17 @@ and is only 2 header files.
 - can render images
 - has no other external dependencies
 
-The original nanosvg project is hosted at https://github.com/memononen/nanosvg
-
 # Specification
 
-The already existing tksvg extension will be adapted and included in Tk.
-A new image format will be created. The name is **svgnano**.
-The choosen name hints the usage of a not fully compatible SVG parser.
-It leaves the image name **svg** open for further usage.
+The already existing [tksvg][] extension will be adapted and included in Tk.
+A new image format will be created. The image format name is **svg**.
+The new format will support a small list of options.
+If there is a better implementation with p.e. full [SVG][] support, the interface can be reused and the limitations in the description can be removed.
+A description of the features and limitations of the current implementation is in section [Supported SVG](#Supported-SVG). It will be also described in the photo(n) man page.
 
-The **svgnano** image format has the following format suboptions:
+The **svg** image format has the following format suboptions:
 
- > **svgnano** **-dpi** _dpiValue_ **-scale** _scaleValue_ **-unit** _unitValue_ **-x** _xValue_ **-y** _yValue_
+ > **svg** **-dpi** _dpiValue_ **-scale** _scaleValue_ **-unit** _unitValue_
 
 *dpiValue* is used in conversion between given coordiantes and screen resolution. The value must be greater then 0.0. The default value is 96.
 
@@ -52,26 +49,23 @@ The **svgnano** image format has the following format suboptions:
 
 *unitValue* is the unit of all coordinates in the svg data. Available units are px (default, coordinates in pixel), pt (1/72 inch), pc (12 pt), mm, cm and in.
 
-*xValue* is used to move the created image in x-direction. The default value is 0.
-
-*yValue* is used to move the created image in y-direction. The default value is 0.
-
 The given format options are only used at creation time of the image and are not preserved in the image. This means that:
 
-  1. `$img data -format svgnano` triggers the error _"image string format
-     "svgnano" is not supported"_; Tk cannot convert a photo image into an
-     SVG.
+  1. `$img data -format svg` triggers the error _"image string format
+     "svg" is not supported"_; Tk cannot convert a photo image into an
+     [SVG][].
 
   2. In this:
 
-        $img configure -format {svgnano -scale 2}
-        $img configure -format {svgnano -x 10}
+        $img configure -format {svg -scale 2}
+        $img configure -format {svg -dpi 96}
 
     the second call takes `-scale` as the default value (1).
 
+<a name="Supported-SVG"></a>
 # Supported SVG
 
-The svgnano format supports a wide range of SVG features, however some features (e.g. 'text') are missing and silently ignored when reading the SVG data.
+The **svg** format supports a wide range of [SVG][] features, however some features (e.g. 'text') are missing and silently ignored when reading the [SVG][] data.
 
 ## Elements
 
@@ -159,12 +153,32 @@ The svgnano format supports a wide range of SVG features, however some features 
 
 # Discussion
 
-- http://code.activestate.com/lists/tcl-core/19871/
-- http://code.activestate.com/lists/tcl-core/19994/
+In <http://code.activestate.com/lists/tcl-core/19994/> Francois Vogel mentioned his concerns.
 
-## Open questions
+- A.1 Alternatives are described here at the end.
+- A.2 The interface is small (-format ...). Other, better implementations could provide it also.
+- A.3 is now described in section "Supported SVG" above.
+- A.4 The following, not necessary needed option will be removed:
+  - **-x** *xValue* is used to move the created image in x-direction. The default value is 0.
+  - **-y** *yValue* is used to move the created image in y-direction. The default value is 0.
+- B.3 **svg**
+- B.4 has the fix surfaced?
+- C is about better documentation
 
-- Are all of the above format options necessary? May be remove the *xValue* and *yValue* options.
+Thread <http://code.activestate.com/lists/tcl-core/19871/> is about compilers.
+
+Thread <http://code.activestate.com/lists/tcl-core/19985/> was the last discussion.
+
+> <http://code.activestate.com/lists/tcl-core/20110/> and <http://code.activestate.com/lists/tcl-core/20111/> talk about a better solution, not using the **photo** comand and instead making a p.e. **svg** command with full functionality (especially writing). This is imho out of scope of this tip. It should be addressed in a separate tip. If done so the new function can then be used to support the functionality in this tip.
+
+There was some discussion on the further usage and maintenance of this image type. Here are the current state of the implementation in this area:
+
+- This tip will provide an **readonly** display of svg images with a **limited** set of funtionality described above.
+- The created image will have no information about the [SVG][] data and format options.
+- The included nanosvg header files will be remain diffable to the original ones. So changes in the original project can be ported to our implementation.
+- The format options will be limited to a minimum. So the implementation can later be substituted with a full [SVG][] compatible one.
+- If the implamenation will be replaced it will occur in a different tk version. So there is no need to create a scpecial variable describing the used [SVG][] implementation.
+- To further reduce the interface it is possible to remove the **-dpi** and **-unit** options. There is currently no demand for this.
 
 # Implementation
 
@@ -188,18 +202,24 @@ The new format is described in the photo(n) man page.
     # create image
     image create photo foo -data $data
     # change size
-    foo configure -format {svgnano -scale 2}
-    # move right and up, all other values are reset
-    foo configure -format {svgnano -x 10 -y -20}
+    foo configure -format {svg -scale 2}
+    # change dpi value
+    foo configure -format {svg -dpi 96}
     # use other unit
-    foo configure -format {svgnano -unit mm}
+    foo configure -format {svg -unit mm}
 
 # Alternatives
 
-- Use of another library with full SVG support instead of the current proposal for partial support: could be done as a further step.
+- Use of another library with full [SVG][] support instead of the current proposal for partial support: could be done as a further step.
 
 - Direct manipulation of SVG vector graphics (as opposed to the present proposal of converting SVG to pixel format in a photo) would be desirable. However this can always be done later, for instance in the frame of the canvas widget. It is deemed an already large improvement to have Tk be able to read SVG images and convert them to pixel-based photos.
 
 # Copyright
 
 This document has been placed in the public domain.
+
+[nanosvg]: <https://github.com/memononen/nanosvg>
+[tksvg]: <https://github.com/auriocus/tksvg>
+[SVG]: <http://www.w3.org/TR/SVG11/>
+
+
