Tk-version -> Tcl-version

--- a/tip/528.md
+++ b/tip/528.md
@@ -5,7 +5,7 @@
 	Vote:           Pending
 	Created:        05-Dec-2018
 	Post-History:   
-	Tk-Version:    8.7
+	Tcl-Version:    8.7
 	Tk-Branch:     offsetof
 -----
 
