Correct tip number in title. Be more verbose on script contents.

--- a/tip/529.md
+++ b/tip/529.md
@@ -1,4 +1,4 @@
-# TIP 528: Add metadata dict property to tk photo image
+# TIP 529: Add metadata dict property to tk photo image
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
@@ -65,7 +65,9 @@ The following commands are directly concerned:
     myimage cget -metadata
     myimage configure -metadata $metadict
 
-Any load and save command may implicitly use the content of the metadata dict.
+It is also ok to store application data related to the image within the property dict. A widget may store special properties.
+
+Any load and save command may use the content of the metadata dict.
 This may be an ongoing process, specially within the Img patch.
 
 The commands are:
@@ -73,6 +75,12 @@ The commands are:
     image create photo myimage -file myfile.bmp
     myimage configure -file myfile.bmp
     myimage write file.bmp
+
+The image create and file load functions recreate the metadata dict.
+Any current contents is lost.
+
+The write file commands uses any dict keys it knows.
+Any unknown dict keys are ignored.
 
 # Implementation
 
