TIP 429: Added implementation link

--- a/tip/529.md
+++ b/tip/529.md
@@ -6,6 +6,7 @@
 	Created:        07-Dec-2018
 	Keywords:       Tk, image
 	Tcl-Version:    8.7
+	Tk-Branch:     tip-529-image-metadata
 -----
 
 # Abstract
