Editorial pass on 507

--- a/tip/507.md
+++ b/tip/507.md
@@ -16,11 +16,16 @@ Tk needs scalable images on high resolution mobile devices. This TIP proposes to
 
 # Rationale
 
-Tk is running on desktop and mobile devices. The out of the box image formats
-do not scale and are to tiny on high res mobile devices.
-The same goes for the image formats provided by the Img extension.
+Tk is running on desktop and mobile devices. However, the out-of-the-box photo
+image formats do not scale and are too tiny on high resolution mobile devices.
+The same goes for the image formats provided by the [Img][] extension.
 
-There is already a tk image extension [tksvg][]. The implementation is using [nanosvg][]. It has no other external dependencies and is only 2 header files.
+The response to this challenge in general (on the web, in applications, etc.)
+has been to adopt the [SVG][] format, as that is scalable and does not
+typically depend on being rendered at a particular resolution.
+Moreover, there is already a Tk image extension to do the conversion,
+[tksvg][]. The implementation is using the [nanosvg][] library It has no other
+external dependencies and is only 2 header files.
 
 [nanosvg][] was choosen because it:
 
@@ -34,20 +39,23 @@ There is already a tk image extension [tksvg][]. The implementation is using [na
 # Specification
 
 The already existing [tksvg][] extension will be adapted and included in Tk.
-A new image format will be created. The image format name is **svg**.
+A new photo image format will be created. The photo image format name is **svg**.
 The new format will support a small list of options.
-If there is a better implementation with p.e. full [SVG][] support, the interface can be reused and the limitations in the description can be removed.
+Note that scope still exists in the future for full integration of SVG as its
+own full image type (which would allow more options for rendering) instead of
+having the side-trip via the photo image's pixel buffer, but this is out of
+scope of this TIP.
 A description of the features and limitations of the current implementation is in section [Supported SVG](#Supported-SVG). It will be also described in the photo(n) man page.
 
 The **svg** image format has the following format suboptions:
 
  > **svg** **-dpi** _dpiValue_ **-scale** _scaleValue_ **-unit** _unitValue_
 
-*dpiValue* is used in conversion between given coordiantes and screen resolution. The value must be greater then 0.0. The default value is 96.
+*dpiValue* is used in conversion between given coordiantes and screen resolution. The value must be greater then 0.0. The default value is `96`.
 
-*scaleValue* is used to scale the resulting image. The value must be greater then 0.0. The default value is 1.
+*scaleValue* is used to scale the resulting image. The value must be greater then 0.0. The default value is `1.0`.
 
-*unitValue* is the unit of all coordinates in the svg data. Available units are px (default, coordinates in pixel), pt (1/72 inch), pc (12 pt), mm, cm and in.
+*unitValue* is the unit of all coordinates in the svg data. Available units are `px` (default, coordinates in pixel), `pt` (1/72 inch), `pc` (12 pt), `mm`, `cm` and `in`.
 
 The given format options are only used at creation time of the image and are not preserved in the image. This means that:
 
@@ -61,6 +69,9 @@ The given format options are only used at creation time of the image and are not
         $img configure -format {svg -dpi 96}
 
     the second call takes `-scale` as the default value (1).
+
+There is no intention to provide a reverse mechanism for saving a photo image
+as an SVG image.
 
 <a name="Supported-SVG"></a>
 # Supported SVG
@@ -221,5 +232,4 @@ This document has been placed in the public domain.
 [nanosvg]: <https://github.com/memononen/nanosvg>
 [tksvg]: <https://github.com/auriocus/tksvg>
 [SVG]: <http://www.w3.org/TR/SVG11/>
-
-
+[Img]: <https://sourceforge.net/projects/tkimg/>
