Docuement current (failed) approach to set write metadata.

--- a/tip/529.md
+++ b/tip/529.md
@@ -83,6 +83,26 @@ Any current contents is lost.
 The write file commands uses any dict keys it knows.
 Any unknown dict keys are ignored.
 
+## C interface
+
+Two new stub table functions are added:
+
+    Tcl_Obj * Tk_PhotoGetMetadata(Tk_PhotoHandle handle)
+
+    void Tk_PhotoSetMetadata(Tk_PhotoHandle handle, Tcl_Obj *metadata)
+
+This works well for image read. The function "Tk_PhotoSetMetadata" is called within the image read function.
+
+But it is not suitable for image write, as the required photo handle is not passed into the write functions:
+
+    static int CommonWriteGIF(Tcl_Interp *interp,
+            const char *fileName,
+            WriteBytesFunc *writeProc,
+            Tcl_Obj *format,
+            Tk_PhotoImageBlock *blockPtr);
+
+In consequence, the write function should be extended by the metadata object pointer.
+
 # Implementation
 
 The current implementation is only a sketch in my brain.
@@ -93,6 +113,10 @@ Any help and comments are appreciated.
 I am realy a novice here.
 
 Implementation may start soon with the tag tip-529-image-metadata.
+
+# Rejected alternatives
+
+
 
 # Copyright
 
